# PoC

./: Dockerfile  README.md  UC.md  UC_Checklist.md  coffee_machine.json  docker-compose.yaml  docker-compose.yml  pyproject.toml  strictdoc_config.py  use_cases.sdoc
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  TestIntegration.vue  main-editor.js  main-test.js  main.js  router.js  style.css
frontend/src/components/: DecisionTreeEditor.vue
frontend/src/views/: Dashboard.vue  Import.vue  Report.vue  TreeEditor.vue
src/poc/: adapters.py  app.py  dt.py  models.py  routes.py
src/poc/static/: import.js  style.css
src/poc/static/vue-assets/: dt-editor.css  dt-editor.js  runtime-dom.esm-bundler.js  test-integration.js
src/poc/templates/: dashboard.html  decision_tree.html  decision_tree.old.html  import.html  report.html  test_vue.html
src/poc/templates/layouts/: base.html
tests/: conftest.py  test_import_page.py
