[project]
name = "poc"
version = "0.1.0"
description = ""
authors = [
    {name = "Davide Testolin"},
    {name = "Filippo Guerra"},
    {name = "Aldo Bettega"},
    {name = "Felician Mario Necsulescu"},
    {name = "Ana Maria Draghici"},
    {name = "Davide Lorenzon"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.3,<4.0.0)",
    "strictdoc (>=0.18.1,<0.19.0)",
    "waitress (>=3.0.2,<4.0.0)",
    "fpdf2 (>=2.8.7,<3.0.0)",
    "fpdf (>=1.7.2,<2.0.0)",
    "pymongo (>=4.16.0,<5.0.0)",
    "pydantic (>=2.12.5,<3.0.0)"
]

[tool.poetry]
packages = [{include = "poc", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.2,<0.16.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "types-flask (>=1.1.6,<2.0.0)",
    "pytest (>=8.0.0,<9.0.0)",
    "strictdoc"
]
